# autobrand

./: .gitignore  README.md  analysis.py  brief.md  evolve.py  generate.py  pyproject.toml  score.py
examples/: coffee-brief.md  fintech-brief.md  studio-brief.md
