[project]
name = "autobrand"
version = "0.1.0"
description = "Autonomous brand identity evolution. Write a brief. Walk away. Wake up to a brand."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.42.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
